--- a/drill4j-services/.env
+++ b/drill4j-services/.env
@@ -1,4 +1,5 @@
-BACK_VERSION=0.8.0-alpha.1
-TEST2CODE_PLUGIN_VERSION=0.8.0-alpha.1
-FRONT_VERSION=0.8.0-alpha
+BACK_VERSION=0.8.0-38-interview
+TEST2CODE_PLUGIN_VERSION=0.8.0-36-interview.3
+FRONT_VERSION=0.1.0-83
+TEST2CODE_UI_VERSION=0.1.0-79-risks-table-scrarch.8
 LOG_LEVEL=TRACE
